[package]
name = "imgui-baseview"
version = "0.0.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
description = "A baseview backend for imgui"
license = "MIT"
repository = "https://github.com/BillyDM/imgui-baseview"
documentation = "https://docs.rs/imgui-baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl"]
opengl = ["raw-gl-context", "imgui-opengl-renderer", "gl"]

[dependencies]
imgui = { version = "0.8.0", default-features = false }
# imgui = { version = "0.7.0", default-features = false }
raw-gl-context = { version = "0.1", optional = true }
# imgui-opengl-renderer = { version = "0.11", optional = true }
imgui-opengl-renderer = { git =" https://github.com/Fredemus/rust-imgui-opengl-renderer", optional = true }
# [dependencies.imgui-opengl-renderer]
# path = "../rust-imgui-opengl-renderer/"
# optional = true

gl = { version = "0.14", optional = true }
keyboard-types = { version = "0.5", default-features = false }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9fbfe18f9a6859da83a55f7b51fe1e5a2f6ca1e6" }
raw-window-handle = "0.3"