[package]
name = "imgui-baseview"
version = "0.0.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
description = "A baseview backend for imgui"
license = "MIT"
repository = "https://github.com/BillyDM/imgui-baseview"
documentation = "https://docs.rs/imgui-baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl"]
opengl = ["raw-gl-context", "imgui-opengl-renderer", "gl"]

[dependencies]
imgui = { version = "0.7", default-features = false }
raw-gl-context = { version = "0.1", optional = true }
imgui-opengl-renderer = { version = "0.11", optional = true }
gl = { version = "0.14", optional = true }
keyboard-types = { version = "0.5", default-features = false }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
raw-window-handle = "0.3"